# GLSlayer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/GLSlayer/: Buffer.h  Common.h  FixXlibMacros.h  Framebuffer.h  Query.h  RenderContext.h  RenderContextInit.h  Resource.h  SamplerState.h  Shader.h  Texture.h  TransformFeedback.h  VertexFormat.h
libs/include/Math/: geometry.h  mat3.h  mat4.h  mathutil.h  quat.h  transform.h  vec2.h  vec3.h  vec4.h
projects/qtcreator/: GLSlayer.pro
projects/qtcreator/DeferredShading/: DeferredShading.pro
projects/qtcreator/GLSlayer/: GLSlayer.pro
projects/qtcreator/Triangle/: Triangle.pro
projects/vs2015/: GLSlayer.sln
projects/vs2015/GLSlayer/: GLSlayer.vcxproj
projects/vs2015/Samples/DeferredShading/: DeferredShading.vcxproj  DeferredShading.vcxproj.filters
projects/vs2015/Samples/Triangle/: Triangle.vcxproj
projects/vs2017/GLSlayer/: GLSlayer.vcxproj  GLSlayer.vcxproj.filters
projects/vs2017/Samples/DeferredShading/: DeferredShading.vcxproj
projects/vs2017/Samples/Triangle/: Triangle.vcxproj  Triangle.vcxproj.filters
projects/vs2019/GLSlayer/: GLSlayer.vcxproj
projects/vs2019/Samples/DeferredShading/: DeferredShading.vcxproj  DeferredShading.vcxproj.filters
projects/vs2019/Samples/Triangle/: Triangle.vcxproj
qtcreator/DeferredShading/: DeferredShading.pro
qtcreator/GLSlayer/: GLSlayer.pro  glslayer-docs.txt
qtcreator/Triangle/: Triangle.pro
samples/: CMakeLists.txt
samples/Common/: CMakeLists.txt  Console.h  ISample.h  ObjLoader.cpp  ObjLoader.h  SampleFramework.h  SampleFramework_Linux.cpp  SampleFramework_Linux.h  SampleFramework_Windows.cpp  SampleFramework_Windows.h  Utils.cpp  Utils.h
samples/DeferredShading/: CMakeLists.txt  DeferredSample.cpp  DeferredSample.h  Light.h  Main.cpp
samples/DeferredShading/Shaders/: GBuffer.frag  GBuffer.vert  Lighting.frag  Lighting.vert  ScreenSpace.vert  SimpleTexture.frag
samples/Triangle/: CMakeLists.txt  Main.cpp  TriangleSample.cpp  TriangleSample.h
samples/Triangle/Shaders/: Simple.frag  Simple.vert
source/: CMakeLists.txt
source/opengl/: CMakeLists.txt  GLBuffer.cpp  GLBuffer.h  GLCommon.cpp  GLCommon.h  GLContextInfo.h  GLFramebuffer.cpp  GLFramebuffer.h  GLQuery.cpp  GLQuery.h  GLRenderContext.cpp  GLRenderContext.h  GLRenderContext_Linux.cpp  GLRenderContext_Windows.cpp  GLResource.h  GLSamplerState.cpp  GLSamplerState.h  GLShader.cpp  GLShader.h  GLSlayerMessages.cpp  GLSlayerMessages.h  GLTexture.cpp  GLTexture.h  GLTransformFeedback.cpp  GLTransformFeedback.h  GLVertexFormat.cpp  GLVertexFormat.h
source/opengl/extensions/: extensions_linux.txt  extensions_windows.txt  glelcg-xml.rb  glelcg.rb  glext_linux_flags.h  glext_linux_funcs.h  glext_linux_load.inc  glext_linux_load_decl.h  glext_linux_load_def.inc  glext_linux_ptrs.h  glext_linux_ptrs.inc  glext_windows_flags.h  glext_windows_funcs.h  glext_windows_load.inc  glext_windows_load_decl.h  glext_windows_load_def.inc  glext_windows_ptrs.h  glext_windows_ptrs.inc  glxext_flags.h  glxext_funcs.h  glxext_load.inc  glxext_load_decl.h  glxext_load_def.inc  glxext_ptrs.h  glxext_ptrs.inc  h_glext.cpp  h_glext.h  make-exts.sh  make_exts.bat  wglext_flags.h  wglext_funcs.h  wglext_load.inc  wglext_load_decl.h  wglext_load_def.inc  wglext_ptrs.h  wglext_ptrs.inc
vs2010/: GLSlayer.sln
vs2010/GLSlayer/: GLSlayer.vcxproj  GLSlayer.vcxproj.filters
vs2010/Samples/DeferredShading/: DeferredShading.vcxproj  DeferredShading.vcxproj.filters
vs2010/Samples/Triangle/: Triangle.vcxproj  Triangle.vcxproj.filters
vs2012/GLSlayer/: GLSlayer.vcxproj  GLSlayer.vcxproj.filters
vs2012/Samples/DeferredShading/: DeferredShading.vcxproj  DeferredShading.vcxproj.filters
vs2012/Samples/Triangle/: Triangle.vcxproj
vs2015/GLSlayer/: GLSlayer.vcxproj  GLSlayer.vcxproj.filters
vs2015/Samples/DeferredShading/: DeferredShading.vcxproj  DeferredShading.vcxproj.filters
vs2015/Samples/Triangle/: Triangle.vcxproj  Triangle.vcxproj.filters
